--- a/style.css
+++ b/style.css
@@ -4390,7 +4390,7 @@ main {
   font-family: "Avenir Next Cyr W00 Bold";
   width: 100%;
   position: relative;
-  overflow: hidden;
+  overflow: initial;
 }
 /* line 365, sass/layout/_main.scss */
 .cta-small .cta-text {
