green on residential experiences

--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -728,6 +728,10 @@ section {
   border-top: 5px solid $yellow-primary;
 }
 
+.parent-page-residential-experiences main {
+  border-top: 5px solid $green-primary;
+}
+
 .page-template-product main, .page-template-panel main {
   border-top: 5px solid $blue-primary;
 }
