--- a/style.css
+++ b/style.css
@@ -4982,7 +4982,7 @@ main {
 .banner-text {
   position: relative;
   z-index: 10;
-  padding: 50px 150px 50px 50px;
+  padding: 50px 50px 50px 50px;
 }
 /* line 357, sass/layout/_main.scss */
 .banner-text .banner-title {
@@ -5004,17 +5004,27 @@ main {
 }
 
 /* line 376, sass/layout/_main.scss */
+.parent-page-story-page .banner-inner {
+  height: 500px;
+}
+/* line 379, sass/layout/_main.scss */
+.parent-page-story-page .banner-inner .banner-text {
+  text-align: center;
+  margin-top: 260px;
+}
+
+/* line 385, sass/layout/_main.scss */
 .banner-inner {
   height: 300px;
 }
 @media screen and (min-width: 1200px) {
-  /* line 376, sass/layout/_main.scss */
+  /* line 385, sass/layout/_main.scss */
   .banner-inner {
     height: 400px;
   }
 }
 
-/* line 386, sass/layout/_main.scss */
+/* line 395, sass/layout/_main.scss */
 .cta-small {
   font-size: 0.75em;
   text-transform: uppercase;
@@ -5023,7 +5033,7 @@ main {
   position: relative;
   overflow: initial;
 }
-/* line 394, sass/layout/_main.scss */
+/* line 403, sass/layout/_main.scss */
 .cta-small .cta-text {
   position: relative;
   right: 0px;
@@ -5031,7 +5041,7 @@ main {
   -moz-transition: all 0.3s;
   transition: all 0.3s;
 }
-/* line 401, sass/layout/_main.scss */
+/* line 410, sass/layout/_main.scss */
 .cta-small .cta-text .right {
   display: inline-block;
   width: 1.5em;
@@ -5041,7 +5051,7 @@ main {
   text-align: center;
   line-height: 1.1em;
 }
-/* line 411, sass/layout/_main.scss */
+/* line 420, sass/layout/_main.scss */
 .cta-small .cta-text .right:after {
   content: '';
   display: inline-block;
@@ -5054,7 +5064,7 @@ main {
   transform: rotate(45deg);
 }
 
-/* line 425, sass/layout/_main.scss */
+/* line 434, sass/layout/_main.scss */
 .cta-big {
   margin-top: 50px;
   font-size: 0.75em;
@@ -5064,7 +5074,7 @@ main {
   position: relative;
   overflow: initial;
 }
-/* line 434, sass/layout/_main.scss */
+/* line 443, sass/layout/_main.scss */
 .cta-big .cta-text {
   position: relative;
   right: 0px;
@@ -5072,7 +5082,7 @@ main {
   -moz-transition: all 0.3s;
   transition: all 0.3s;
 }
-/* line 441, sass/layout/_main.scss */
+/* line 450, sass/layout/_main.scss */
 .cta-big .cta-text .right {
   display: inline-block;
   width: 7em;
@@ -5081,7 +5091,7 @@ main {
   margin-left: 1.5em;
   text-align: center;
 }
-/* line 450, sass/layout/_main.scss */
+/* line 459, sass/layout/_main.scss */
 .cta-big .cta-text .right:after {
   content: '';
   display: inline-block;
@@ -5094,37 +5104,37 @@ main {
   transform: rotate(45deg);
 }
 
-/* line 467, sass/layout/_main.scss */
+/* line 476, sass/layout/_main.scss */
 .callout-news {
   padding: 25px;
   height: 400px;
 }
-/* line 471, sass/layout/_main.scss */
+/* line 480, sass/layout/_main.scss */
 .callout-news .callout-news-headline {
   margin-bottom: 15px;
 }
-/* line 474, sass/layout/_main.scss */
+/* line 483, sass/layout/_main.scss */
 .callout-news .callout-news-headline h5 {
   font-family: "Avenir Next Cyr W00 Heavy";
 }
-/* line 476, sass/layout/_main.scss */
+/* line 485, sass/layout/_main.scss */
 .callout-news .callout-news-headline h5 a {
   color: #3a3a3a;
 }
-/* line 481, sass/layout/_main.scss */
+/* line 490, sass/layout/_main.scss */
 .callout-news .callout-news-headline h6 {
   margin-bottom: 25px;
   font-family: "Avenir Next Cyr W00 Bold";
   color: #3a3a3a;
 }
 
-/* line 489, sass/layout/_main.scss */
+/* line 498, sass/layout/_main.scss */
 .information-holder {
   float: left;
   width: 100%;
 }
 
-/* line 494, sass/layout/_main.scss */
+/* line 503, sass/layout/_main.scss */
 .information-video {
   background: black;
   float: left;
@@ -5132,14 +5142,14 @@ main {
   height: 100%;
 }
 
-/* line 501, sass/layout/_main.scss */
+/* line 510, sass/layout/_main.scss */
 .information-network {
   border-left: 10px solid white;
   float: left;
   width: 100%;
 }
 
-/* line 507, sass/layout/_main.scss */
+/* line 516, sass/layout/_main.scss */
 .information-bar {
   height: 52px;
   background-color: #fec935;
@@ -5150,17 +5160,17 @@ main {
   width: 100%;
 }
 
-/* line 517, sass/layout/_main.scss */
+/* line 526, sass/layout/_main.scss */
 .person {
   width: 25%;
   float: left;
 }
-/* line 521, sass/layout/_main.scss */
+/* line 530, sass/layout/_main.scss */
 .person img {
   float: left;
 }
 
-/* line 528, sass/layout/_main.scss */
+/* line 537, sass/layout/_main.scss */
 section {
   float: left;
   position: relative;
@@ -5168,81 +5178,81 @@ section {
   margin-bottom: 10px;
 }
 
-/* line 535, sass/layout/_main.scss */
+/* line 544, sass/layout/_main.scss */
 .intro-text, .callout-text, .listing-text, .body-text-area, .icons-text, .buttons-text, .form-text {
   padding: 50px;
   float: left;
 }
 
-/* line 540, sass/layout/_main.scss */
+/* line 549, sass/layout/_main.scss */
 .email-signup-text {
   padding: 50px;
 }
 
-/* line 544, sass/layout/_main.scss */
+/* line 553, sass/layout/_main.scss */
 .schedule-text {
   float: left;
   padding: 50px;
 }
 
-/* line 549, sass/layout/_main.scss */
+/* line 558, sass/layout/_main.scss */
 .quote-text {
   padding: 50px;
   text-align: center;
 }
 
-/* line 554, sass/layout/_main.scss */
+/* line 563, sass/layout/_main.scss */
 .image {
   height: 300px;
 }
 
-/* line 558, sass/layout/_main.scss */
+/* line 567, sass/layout/_main.scss */
 .image-with-text {
   height: 600px;
 }
 
-/* line 563, sass/layout/_main.scss */
+/* line 572, sass/layout/_main.scss */
 .icon-box {
   width: 33.3%;
   float: left;
   padding: 20px 120px 20px 0;
 }
-/* line 568, sass/layout/_main.scss */
+/* line 577, sass/layout/_main.scss */
 .icon-box h5 {
   font-family: "Avenir Next Cyr W00 Bold";
 }
 
-/* line 573, sass/layout/_main.scss */
+/* line 582, sass/layout/_main.scss */
 .schedule-box {
   width: 50%;
   float: left;
   padding: 20px 120px 20px 0;
 }
-/* line 578, sass/layout/_main.scss */
+/* line 587, sass/layout/_main.scss */
 .schedule-box .strong {
   font-family: "Avenir Next Cyr W00 Bold";
 }
-/* line 581, sass/layout/_main.scss */
+/* line 590, sass/layout/_main.scss */
 .schedule-box .blue {
   color: #0ebde8;
 }
 
-/* line 586, sass/layout/_main.scss */
+/* line 595, sass/layout/_main.scss */
 .buttons h3, .form h3 {
   margin-bottom: 0;
 }
 
-/* line 590, sass/layout/_main.scss */
+/* line 599, sass/layout/_main.scss */
 .buttons p, .form p {
   margin-bottom: 15px;
 }
 
-/* line 594, sass/layout/_main.scss */
+/* line 603, sass/layout/_main.scss */
 .regular-font {
   font-family: "Avenir Next Cyr W00 Regular";
 }
 
-/* line 598, sass/layout/_main.scss */
+/* line 607, sass/layout/_main.scss */
 .buttons-cta {
   display: inline;
   padding: 25px 35px 25px 25px;
@@ -5252,7 +5262,7 @@ section {
   position: relative;
   float: left;
 }
-/* line 607, sass/layout/_main.scss */
+/* line 616, sass/layout/_main.scss */
 .buttons-cta .right {
   display: inline-block;
   width: 1.5em;
@@ -5263,7 +5273,7 @@ section {
   border: 0.1em solid #2791bd;
   line-height: 1.1em;
 }
-/* line 618, sass/layout/_main.scss */
+/* line 627, sass/layout/_main.scss */
 .buttons-cta .right:after {
   content: '';
   display: inline-block;
@@ -5277,24 +5287,24 @@ section {
   border-top: 0.1em solid #2791bd;
   border-right: 0.1em solid #2791bd;
 }
-/* line 632, sass/layout/_main.scss */
+/* line 641, sass/layout/_main.scss */
 .buttons-cta:hover {
   background: white;
   color: #2791bd;
   border: 3px solid #2791bd;
   padding: 22px 32px 22px 22px;
 }
-/* line 638, sass/layout/_main.scss */
+/* line 647, sass/layout/_main.scss */
 .buttons-cta:hover .right {
   border: 0.1em solid #2791bd;
 }
-/* line 641, sass/layout/_main.scss */
+/* line 650, sass/layout/_main.scss */
 .buttons-cta:hover .right::after {
   border-top: 0.1em solid #2791bd;
   border-right: 0.1em solid #2791bd;
 }
 
-/* line 650, sass/layout/_main.scss */
+/* line 659, sass/layout/_main.scss */
 .submit-buttons {
   display: inline;
   padding: 10px 20px 10px 10px;
@@ -5305,7 +5315,7 @@ section {
   float: left;
   margin-top: 30px;
 }
-/* line 660, sass/layout/_main.scss */
+/* line 669, sass/layout/_main.scss */
 .submit-buttons .right {
   display: inline-block;
   width: 1.5em;
@@ -5315,7 +5325,7 @@ section {
   text-align: center;
   line-height: 1.1em;
 }
-/* line 670, sass/layout/_main.scss */
+/* line 679, sass/layout/_main.scss */
 .submit-buttons .right:after {
   content: '';
   display: inline-block;
@@ -5328,44 +5338,44 @@ section {
   transform: rotate(45deg);
 }
 
-/* line 684, sass/layout/_main.scss */
+/* line 693, sass/layout/_main.scss */
 .content-half {
   padding-right: 20px;
   margin-top: 20px;
 }
-/* line 688, sass/layout/_main.scss */
+/* line 697, sass/layout/_main.scss */
 .content-half h5 {
   font-family: "Avenir Next Cyr W00 Bold";
   margin-bottom: 0;
 }
 
-/* line 694, sass/layout/_main.scss */
+/* line 703, sass/layout/_main.scss */
 .content-text {
   padding: 50px;
   float: left;
 }
-/* line 698, sass/layout/_main.scss */
+/* line 707, sass/layout/_main.scss */
 .content-text p {
   color: black;
 }
-/* line 702, sass/layout/_main.scss */
+/* line 711, sass/layout/_main.scss */
 .content-text h4 {
   font-family: "Avenir Next Cyr W00 Bold";
 }
 
-/* line 708, sass/layout/_main.scss */
+/* line 717, sass/layout/_main.scss */
 .side-text p {
   margin-bottom: 3px;
   font-size: 10px;
   color: #494949;
 }
 
-/* line 715, sass/layout/_main.scss */
+/* line 724, sass/layout/_main.scss */
 #content {
   float: left;
 }
 
-/* line 720, sass/layout/_main.scss */
+/* line 729, sass/layout/_main.scss */
 .thumbnail {
   float: left;
   width: 100%;
@@ -5373,37 +5383,37 @@ section {
   margin-bottom: 15px;
 }
 
-/* line 727, sass/layout/_main.scss */
+/* line 736, sass/layout/_main.scss */
 .single-post main, .blog main, .page-template-global-network main, main {
   border-top: 5px solid #fec935;
 }
 
-/* line 731, sass/layout/_main.scss */
+/* line 740, sass/layout/_main.scss */
 .parent-page-residential-experiences main {
   border-top: 5px solid #4fd1a1;
 }
 
-/* line 735, sass/layout/_main.scss */
+/* line 744, sass/layout/_main.scss */
 .page-template-product main, .page-template-panel main {
   border-top: 5px solid #2791bd;
 }
 
-/* line 739, sass/layout/_main.scss */
+/* line 748, sass/layout/_main.scss */
 .parent-page-online-learning main {
   border-top: 5px solid #2791bd;
 }
 
-/* line 743, sass/layout/_main.scss */
+/* line 752, sass/layout/_main.scss */
 .parent-page-residential main {
   border-top: 5px solid #4fd1a1;
 }
 
-/* line 747, sass/layout/_main.scss */
+/* line 756, sass/layout/_main.scss */
 .parent-page-research-ideas main {
   border-top: 5px solid #712880;
 }
 
-/* line 757, sass/layout/_main.scss */
+/* line 766, sass/layout/_main.scss */
 .blog-sidebar {
   padding: 50px 30px;
   background-color: #3a3a3a;
@@ -5412,14 +5422,14 @@ section {
   width: 100%;
 }
 
-/* line 765, sass/layout/_main.scss */
+/* line 774, sass/layout/_main.scss */
 .blog-content {
   float: left;
   padding: 50px;
   width: 100%;
 }
 
-/* line 771, sass/layout/_main.scss */
+/* line 780, sass/layout/_main.scss */
 .blog-sidebar-title {
   text-transform: uppercase;
   font-family: "Avenir Next Cyr W00 Heavy";
@@ -5432,99 +5442,99 @@ section {
   cursor: pointer;
   float: left;
 }
-/* line 783, sass/layout/_main.scss */
+/* line 792, sass/layout/_main.scss */
 .blog-sidebar-title i {
   float: right;
 }
 
-/* line 788, sass/layout/_main.scss */
+/* line 797, sass/layout/_main.scss */
 .blog-sidebar-title-text {
   float: left;
 }
 
-/* line 792, sass/layout/_main.scss */
+/* line 801, sass/layout/_main.scss */
 .blog-categories {
   display: none;
 }
-/* line 795, sass/layout/_main.scss */
+/* line 804, sass/layout/_main.scss */
 .blog-categories ul {
   margin-bottom: 40px;
   float: left;
   width: 100%;
 }
-/* line 800, sass/layout/_main.scss */
+/* line 809, sass/layout/_main.scss */
 .blog-categories ul li {
   padding: 5px;
   float: left;
   width: 100%;
 }
-/* line 805, sass/layout/_main.scss */
+/* line 814, sass/layout/_main.scss */
 .blog-categories ul li a {
   color: #fec935;
   font-size: 15px;
   padding: 5px;
 }
-/* line 811, sass/layout/_main.scss */
+/* line 820, sass/layout/_main.scss */
 .blog-categories ul li.active a {
   background: #fec935;
   color: #3a3a3a;
 }
-/* line 818, sass/layout/_main.scss */
+/* line 827, sass/layout/_main.scss */
 .blog-categories ul li:hover a {
   background: #fec935;
   color: #3a3a3a;
 }
 
-/* line 827, sass/layout/_main.scss */
+/* line 836, sass/layout/_main.scss */
 .blog-post {
   border-top: 5px solid #fec935;
   padding-top: 20px;
   padding-bottom: 20px;
 }
-/* line 832, sass/layout/_main.scss */
+/* line 841, sass/layout/_main.scss */
 .blog-post h2 {
   margin-bottom: 15px;
 }
-/* line 835, sass/layout/_main.scss */
+/* line 844, sass/layout/_main.scss */
 .blog-post h2 a {
   color: #3a3a3a;
 }
-/* line 840, sass/layout/_main.scss */
+/* line 849, sass/layout/_main.scss */
 .blog-post h5 {
   font-family: "Avenir Next Cyr W00 Heavy";
 }
-/* line 843, sass/layout/_main.scss */
+/* line 852, sass/layout/_main.scss */
 .blog-post h5 a {
   color: #3a3a3a;
 }
-/* line 848, sass/layout/_main.scss */
+/* line 857, sass/layout/_main.scss */
 .blog-post h6 {
   color: #3a3a3a;
 }
 
-/* line 853, sass/layout/_main.scss */
+/* line 862, sass/layout/_main.scss */
 .blog-post-small {
   padding-right: 20px;
 }
 
-/* line 857, sass/layout/_main.scss */
+/* line 866, sass/layout/_main.scss */
 .blog-post-categories {
   margin-bottom: 10px;
   color: #fec935;
   font-family: "Avenir Next Cyr W00 Bold";
 }
 
-/* line 863, sass/layout/_main.scss */
+/* line 872, sass/layout/_main.scss */
 .active-category {
   display: block;
 }
 
-/* line 867, sass/layout/_main.scss */
+/* line 876, sass/layout/_main.scss */
 .active-sidebar-title {
   border-bottom: 3px solid #fec935;
 }
 
-/* line 871, sass/layout/_main.scss */
+/* line 880, sass/layout/_main.scss */
 .moretag {
   color: #fec935;
   text-transform: uppercase;
@@ -5532,71 +5542,111 @@ section {
   font-family: "Avenir Next Cyr W00 Bold";
 }
 
-/* line 878, sass/layout/_main.scss */
+/* line 887, sass/layout/_main.scss */
 .social-icons {
   color: #a9a9a9;
 }
-/* line 881, sass/layout/_main.scss */
+/* line 890, sass/layout/_main.scss */
 .social-icons i {
   font-size: 25px;
   margin-right: 20px;
 }
 
-/* line 887, sass/layout/_main.scss */
+/* line 896, sass/layout/_main.scss */
 .news {
   margin-bottom: 0px;
 }
 
-/* line 891, sass/layout/_main.scss */
+/* line 900, sass/layout/_main.scss */
 .image-holder {
   height: 100%;
   display: table !important;
 }
 
-/* line 896, sass/layout/_main.scss */
+/* line 905, sass/layout/_main.scss */
 .image-text {
   padding: 100px 50px;
   display: table-cell;
   vertical-align: middle;
   height: 100%;
 }
-/* line 902, sass/layout/_main.scss */
+/* line 911, sass/layout/_main.scss */
 .image-text h4 {
   color: white;
   margin-bottom: 10px;
   font-family: "Avenir Next Cyr W00 Bold";
 }
 
-/* line 910, sass/layout/_main.scss */
+/* line 919, sass/layout/_main.scss */
 .mejs-container {
   width: 100% !important;
 }
 
-/* line 914, sass/layout/_main.scss */
+/* line 923, sass/layout/_main.scss */
 .video-holder {
   overflow: hidden;
   height: 400px;
   position: relative;
 }
 
-/* line 920, sass/layout/_main.scss */
+/* line 929, sass/layout/_main.scss */
 .wp-video {
   margin-top: -40%;
 }
 
-/* line 924, sass/layout/_main.scss */
+/* line 933, sass/layout/_main.scss */
 .text-holder {
   background-color: #dcdcdc;
   padding: 60px;
   height: 100%;
 }
-/* line 929, sass/layout/_main.scss */
+/* line 938, sass/layout/_main.scss */
 .text-holder h3 {
   color: #393939;
 }
-/* line 933, sass/layout/_main.scss */
+/* line 942, sass/layout/_main.scss */
 .text-holder p {
   color: #9e9e9e;
+}
+
+/* line 947, sass/layout/_main.scss */
+.triangle-bar {
+  width: 100%;
+  float: left;
+  display: block;
+  position: absolute;
+  bottom: 0;
+}
+
+/* line 955, sass/layout/_main.scss */
+.triangle-block {
+  width: calc(50% - 60px);
+  float: left;
+  display: inline;
+  height: 40px;
+  background-color: white;
+}
+
+/* line 963, sass/layout/_main.scss */
+.triangle-left {
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 40px 0 0 60px;
+  border-color: transparent transparent transparent #ffffff;
+  float: left;
+  display: inline;
+}
+
+/* line 973, sass/layout/_main.scss */
+.triangle-right {
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 0 0 40px 60px;
+  border-color: transparent transparent #ffffff transparent;
+  float: left;
+  display: inline;
 }
 
 /* line 1, sass/layout/_header.scss */
