--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -887,6 +887,10 @@ section {
 .social-icons {
   color: #a9a9a9;
 
+  a {
+    color: #a9a9a9;
+  }
+
   i {
     font-size: 25px;
     margin-right: 20px;
