--- a/style.css
+++ b/style.css
@@ -5547,69 +5547,73 @@ section {
   color: #a9a9a9;
 }
 /* line 890, sass/layout/_main.scss */
+.social-icons a {
+  color: #a9a9a9;
+}
+/* line 894, sass/layout/_main.scss */
 .social-icons i {
   font-size: 25px;
   margin-right: 20px;
 }
 
-/* line 896, sass/layout/_main.scss */
+/* line 900, sass/layout/_main.scss */
 .news {
   margin-bottom: 0px;
 }
 
-/* line 900, sass/layout/_main.scss */
+/* line 904, sass/layout/_main.scss */
 .image-holder {
   height: 100%;
   display: table !important;
 }
 
-/* line 905, sass/layout/_main.scss */
+/* line 909, sass/layout/_main.scss */
 .image-text {
   padding: 100px 50px;
   display: table-cell;
   vertical-align: middle;
   height: 100%;
 }
-/* line 911, sass/layout/_main.scss */
+/* line 915, sass/layout/_main.scss */
 .image-text h4 {
   color: white;
   margin-bottom: 10px;
   font-family: "Avenir Next Cyr W00 Bold";
 }
 
-/* line 919, sass/layout/_main.scss */
+/* line 923, sass/layout/_main.scss */
 .mejs-container {
   width: 100% !important;
 }
 
-/* line 923, sass/layout/_main.scss */
+/* line 927, sass/layout/_main.scss */
 .video-holder {
   overflow: hidden;
   height: 400px;
   position: relative;
 }
 
-/* line 929, sass/layout/_main.scss */
+/* line 933, sass/layout/_main.scss */
 .wp-video {
   margin-top: -40%;
 }
 
-/* line 933, sass/layout/_main.scss */
+/* line 937, sass/layout/_main.scss */
 .text-holder {
   background-color: #dcdcdc;
   padding: 60px;
   height: 100%;
 }
-/* line 938, sass/layout/_main.scss */
+/* line 942, sass/layout/_main.scss */
 .text-holder h3 {
   color: #393939;
 }
-/* line 942, sass/layout/_main.scss */
+/* line 946, sass/layout/_main.scss */
 .text-holder p {
   color: #9e9e9e;
 }
 
-/* line 947, sass/layout/_main.scss */
+/* line 951, sass/layout/_main.scss */
 .triangle-bar {
   width: 100%;
   float: left;
@@ -5618,7 +5622,7 @@ section {
   bottom: 0;
 }
 
-/* line 955, sass/layout/_main.scss */
+/* line 959, sass/layout/_main.scss */
 .triangle-block {
   width: calc(50% - 60px);
   float: left;
@@ -5627,7 +5631,7 @@ section {
   background-color: white;
 }
 
-/* line 963, sass/layout/_main.scss */
+/* line 967, sass/layout/_main.scss */
 .triangle-left {
   width: 0;
   height: 0;
@@ -5638,7 +5642,7 @@ section {
   display: inline;
 }
 
-/* line 973, sass/layout/_main.scss */
+/* line 977, sass/layout/_main.scss */
 .triangle-right {
   width: 0;
   height: 0;
