--- a/style.css
+++ b/style.css
@@ -5479,62 +5479,69 @@ section {
   background: #fec935;
   color: #3a3a3a;
 }
+/* line 825, sass/layout/_main.scss */
+.blog-categories ul li:hover {
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
+  opacity: 1;
+}
 /* line 827, sass/layout/_main.scss */
 .blog-categories ul li:hover a {
   background: #fec935;
   color: #3a3a3a;
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
+  opacity: 1;
 }
 
-/* line 836, sass/layout/_main.scss */
+/* line 837, sass/layout/_main.scss */
 .blog-post {
   border-top: 5px solid #fec935;
   padding-top: 20px;
   padding-bottom: 20px;
 }
-/* line 841, sass/layout/_main.scss */
+/* line 842, sass/layout/_main.scss */
 .blog-post h2 {
   margin-bottom: 15px;
 }
-/* line 844, sass/layout/_main.scss */
+/* line 845, sass/layout/_main.scss */
 .blog-post h2 a {
   color: #3a3a3a;
 }
-/* line 849, sass/layout/_main.scss */
+/* line 850, sass/layout/_main.scss */
 .blog-post h5 {
   font-family: "Avenir Next Cyr W00 Heavy";
 }
-/* line 852, sass/layout/_main.scss */
+/* line 853, sass/layout/_main.scss */
 .blog-post h5 a {
   color: #3a3a3a;
 }
-/* line 857, sass/layout/_main.scss */
+/* line 858, sass/layout/_main.scss */
 .blog-post h6 {
   color: #3a3a3a;
 }
 
-/* line 862, sass/layout/_main.scss */
+/* line 863, sass/layout/_main.scss */
 .blog-post-small {
   padding-right: 20px;
 }
 
-/* line 866, sass/layout/_main.scss */
+/* line 867, sass/layout/_main.scss */
 .blog-post-categories {
   margin-bottom: 10px;
   color: #fec935;
   font-family: "Avenir Next Cyr W00 Bold";
 }
 
-/* line 872, sass/layout/_main.scss */
+/* line 873, sass/layout/_main.scss */
 .active-category {
   display: block;
 }
 
-/* line 876, sass/layout/_main.scss */
+/* line 877, sass/layout/_main.scss */
 .active-sidebar-title {
   border-bottom: 3px solid #fec935;
 }
 
-/* line 880, sass/layout/_main.scss */
+/* line 881, sass/layout/_main.scss */
 .moretag {
   color: #fec935;
   text-transform: uppercase;
@@ -5542,78 +5549,78 @@ section {
   font-family: "Avenir Next Cyr W00 Bold";
 }
 
-/* line 887, sass/layout/_main.scss */
+/* line 888, sass/layout/_main.scss */
 .social-icons {
   color: #a9a9a9;
 }
-/* line 890, sass/layout/_main.scss */
+/* line 891, sass/layout/_main.scss */
 .social-icons a {
   color: #a9a9a9;
 }
-/* line 894, sass/layout/_main.scss */
+/* line 895, sass/layout/_main.scss */
 .social-icons i {
   font-size: 25px;
   margin-right: 20px;
 }
 
-/* line 900, sass/layout/_main.scss */
+/* line 901, sass/layout/_main.scss */
 .news {
   margin-bottom: 0px;
 }
 
-/* line 904, sass/layout/_main.scss */
+/* line 905, sass/layout/_main.scss */
 .image-holder {
   height: 100%;
   display: table !important;
 }
 
-/* line 909, sass/layout/_main.scss */
+/* line 910, sass/layout/_main.scss */
 .image-text {
   padding: 100px 50px;
   display: table-cell;
   vertical-align: middle;
   height: 100%;
 }
-/* line 915, sass/layout/_main.scss */
+/* line 916, sass/layout/_main.scss */
 .image-text h4 {
   color: white;
   margin-bottom: 10px;
   font-family: "Avenir Next Cyr W00 Bold";
 }
 
-/* line 923, sass/layout/_main.scss */
+/* line 924, sass/layout/_main.scss */
 .mejs-container {
   width: 100% !important;
 }
 
-/* line 927, sass/layout/_main.scss */
+/* line 928, sass/layout/_main.scss */
 .video-holder {
   overflow: hidden;
   height: 400px;
   position: relative;
 }
 
-/* line 933, sass/layout/_main.scss */
+/* line 934, sass/layout/_main.scss */
 .wp-video {
   margin-top: -40%;
 }
 
-/* line 937, sass/layout/_main.scss */
+/* line 938, sass/layout/_main.scss */
 .text-holder {
   background-color: #dcdcdc;
   padding: 60px;
   height: 100%;
 }
-/* line 942, sass/layout/_main.scss */
+/* line 943, sass/layout/_main.scss */
 .text-holder h3 {
   color: #393939;
 }
-/* line 946, sass/layout/_main.scss */
+/* line 947, sass/layout/_main.scss */
 .text-holder p {
   color: #9e9e9e;
 }
 
-/* line 951, sass/layout/_main.scss */
+/* line 952, sass/layout/_main.scss */
 .triangle-bar {
   width: 100%;
   float: left;
@@ -5622,7 +5629,7 @@ section {
   bottom: 0;
 }
 
-/* line 959, sass/layout/_main.scss */
+/* line 960, sass/layout/_main.scss */
 .triangle-block {
   width: calc(50% - 60px);
   float: left;
@@ -5631,7 +5638,7 @@ section {
   background-color: white;
 }
 
-/* line 967, sass/layout/_main.scss */
+/* line 968, sass/layout/_main.scss */
 .triangle-left {
   width: 0;
   height: 0;
@@ -5642,7 +5649,7 @@ section {
   display: inline;
 }
 
-/* line 977, sass/layout/_main.scss */
+/* line 978, sass/layout/_main.scss */
 .triangle-right {
   width: 0;
   height: 0;
@@ -5653,7 +5660,7 @@ section {
   display: inline;
 }
 
-/* line 987, sass/layout/_main.scss */
+/* line 988, sass/layout/_main.scss */
 #byscripts_ajax_posts_loader_trigger {
   clear: both;
   width: 20%;
@@ -5667,7 +5674,7 @@ section {
   color: white;
   margin-top: 10px;
 }
-/* line 1000, sass/layout/_main.scss */
+/* line 1001, sass/layout/_main.scss */
 #byscripts_ajax_posts_loader_trigger:hover {
   background-color: white;
   color: #fec935;
