--- a/style.css
+++ b/style.css
@@ -5222,37 +5222,42 @@ section {
   font-family: "Avenir Next Cyr W00 Bold";
 }
 
-/* line 582, sass/layout/_main.scss */
+/* line 583, sass/layout/_main.scss */
+.listing-text h3 a {
+  color: white;
+}
+
+/* line 588, sass/layout/_main.scss */
 .schedule-box {
   width: 50%;
   float: left;
   padding: 20px 120px 20px 0;
 }
-/* line 587, sass/layout/_main.scss */
+/* line 593, sass/layout/_main.scss */
 .schedule-box .strong {
   font-family: "Avenir Next Cyr W00 Bold";
 }
-/* line 590, sass/layout/_main.scss */
+/* line 596, sass/layout/_main.scss */
 .schedule-box .blue {
   color: #0ebde8;
 }
 
-/* line 595, sass/layout/_main.scss */
+/* line 601, sass/layout/_main.scss */
 .buttons h3, .form h3 {
   margin-bottom: 0;
 }
 
-/* line 599, sass/layout/_main.scss */
+/* line 605, sass/layout/_main.scss */
 .buttons p, .form p {
   margin-bottom: 15px;
 }
 
-/* line 603, sass/layout/_main.scss */
+/* line 609, sass/layout/_main.scss */
 .regular-font {
   font-family: "Avenir Next Cyr W00 Regular";
 }
 
-/* line 607, sass/layout/_main.scss */
+/* line 613, sass/layout/_main.scss */
 .buttons-cta {
   display: inline;
   padding: 25px 35px 25px 25px;
@@ -5262,7 +5267,7 @@ section {
   position: relative;
   float: left;
 }
-/* line 616, sass/layout/_main.scss */
+/* line 622, sass/layout/_main.scss */
 .buttons-cta .right {
   display: inline-block;
   width: 1.5em;
@@ -5273,7 +5278,7 @@ section {
   border: 0.1em solid #2791bd;
   line-height: 1.1em;
 }
-/* line 627, sass/layout/_main.scss */
+/* line 633, sass/layout/_main.scss */
 .buttons-cta .right:after {
   content: '';
   display: inline-block;
@@ -5287,24 +5292,24 @@ section {
   border-top: 0.1em solid #2791bd;
   border-right: 0.1em solid #2791bd;
 }
-/* line 641, sass/layout/_main.scss */
+/* line 647, sass/layout/_main.scss */
 .buttons-cta:hover {
   background: white;
   color: #2791bd;
   border: 3px solid #2791bd;
   padding: 22px 32px 22px 22px;
 }
-/* line 647, sass/layout/_main.scss */
+/* line 653, sass/layout/_main.scss */
 .buttons-cta:hover .right {
   border: 0.1em solid #2791bd;
 }
-/* line 650, sass/layout/_main.scss */
+/* line 656, sass/layout/_main.scss */
 .buttons-cta:hover .right::after {
   border-top: 0.1em solid #2791bd;
   border-right: 0.1em solid #2791bd;
 }
 
-/* line 659, sass/layout/_main.scss */
+/* line 665, sass/layout/_main.scss */
 .submit-buttons {
   display: inline;
   padding: 10px 20px 10px 10px;
@@ -5315,7 +5320,7 @@ section {
   float: left;
   margin-top: 30px;
 }
-/* line 669, sass/layout/_main.scss */
+/* line 675, sass/layout/_main.scss */
 .submit-buttons .right {
   display: inline-block;
   width: 1.5em;
@@ -5325,7 +5330,7 @@ section {
   text-align: center;
   line-height: 1.1em;
 }
-/* line 679, sass/layout/_main.scss */
+/* line 685, sass/layout/_main.scss */
 .submit-buttons .right:after {
   content: '';
   display: inline-block;
@@ -5338,44 +5343,44 @@ section {
   transform: rotate(45deg);
 }
 
-/* line 693, sass/layout/_main.scss */
+/* line 699, sass/layout/_main.scss */
 .content-half {
   padding-right: 20px;
   margin-top: 20px;
 }
-/* line 697, sass/layout/_main.scss */
+/* line 703, sass/layout/_main.scss */
 .content-half h5 {
   font-family: "Avenir Next Cyr W00 Bold";
   margin-bottom: 0;
 }
 
-/* line 703, sass/layout/_main.scss */
+/* line 709, sass/layout/_main.scss */
 .content-text {
   padding: 50px;
   float: left;
 }
-/* line 707, sass/layout/_main.scss */
+/* line 713, sass/layout/_main.scss */
 .content-text p {
   color: black;
 }
-/* line 711, sass/layout/_main.scss */
+/* line 717, sass/layout/_main.scss */
 .content-text h4 {
   font-family: "Avenir Next Cyr W00 Bold";
 }
 
-/* line 717, sass/layout/_main.scss */
+/* line 723, sass/layout/_main.scss */
 .side-text p {
   margin-bottom: 3px;
   font-size: 10px;
   color: #494949;
 }
 
-/* line 724, sass/layout/_main.scss */
+/* line 730, sass/layout/_main.scss */
 #content {
   float: left;
 }
 
-/* line 729, sass/layout/_main.scss */
+/* line 735, sass/layout/_main.scss */
 .thumbnail {
   float: left;
   width: 100%;
@@ -5383,37 +5388,37 @@ section {
   margin-bottom: 15px;
 }
 
-/* line 736, sass/layout/_main.scss */
+/* line 742, sass/layout/_main.scss */
 .single-post main, .blog main, .page-template-global-network main, main {
   border-top: 5px solid #fec935;
 }
 
-/* line 740, sass/layout/_main.scss */
+/* line 746, sass/layout/_main.scss */
 .parent-page-residential-experiences main {
   border-top: 5px solid #4fd1a1;
 }
 
-/* line 744, sass/layout/_main.scss */
+/* line 750, sass/layout/_main.scss */
 .page-template-product main, .page-template-panel main {
   border-top: 5px solid #2791bd;
 }
 
-/* line 748, sass/layout/_main.scss */
+/* line 754, sass/layout/_main.scss */
 .parent-page-online-learning main {
   border-top: 5px solid #2791bd;
 }
 
-/* line 752, sass/layout/_main.scss */
+/* line 758, sass/layout/_main.scss */
 .parent-page-residential main {
   border-top: 5px solid #4fd1a1;
 }
 
-/* line 756, sass/layout/_main.scss */
+/* line 762, sass/layout/_main.scss */
 .parent-page-research-ideas main {
   border-top: 5px solid #712880;
 }
 
-/* line 766, sass/layout/_main.scss */
+/* line 772, sass/layout/_main.scss */
 .blog-sidebar {
   padding: 50px 30px;
   background-color: #3a3a3a;
@@ -5422,14 +5427,14 @@ section {
   width: 100%;
 }
 
-/* line 774, sass/layout/_main.scss */
+/* line 780, sass/layout/_main.scss */
 .blog-content {
   float: left;
   padding: 50px;
   width: 100%;
 }
 
-/* line 780, sass/layout/_main.scss */
+/* line 786, sass/layout/_main.scss */
 .blog-sidebar-title {
   text-transform: uppercase;
   font-family: "Avenir Next Cyr W00 Heavy";
@@ -5442,49 +5447,49 @@ section {
   cursor: pointer;
   float: left;
 }
-/* line 792, sass/layout/_main.scss */
+/* line 798, sass/layout/_main.scss */
 .blog-sidebar-title i {
   float: right;
 }
 
-/* line 797, sass/layout/_main.scss */
+/* line 803, sass/layout/_main.scss */
 .blog-sidebar-title-text {
   float: left;
 }
 
-/* line 801, sass/layout/_main.scss */
+/* line 807, sass/layout/_main.scss */
 .blog-categories {
   display: none;
 }
-/* line 804, sass/layout/_main.scss */
+/* line 810, sass/layout/_main.scss */
 .blog-categories ul {
   margin-bottom: 40px;
   float: left;
   width: 100%;
 }
-/* line 809, sass/layout/_main.scss */
+/* line 815, sass/layout/_main.scss */
 .blog-categories ul li {
   padding: 5px;
   float: left;
   width: 100%;
 }
-/* line 814, sass/layout/_main.scss */
+/* line 820, sass/layout/_main.scss */
 .blog-categories ul li a {
   color: #fec935;
   font-size: 15px;
   padding: 5px;
 }
-/* line 820, sass/layout/_main.scss */
+/* line 826, sass/layout/_main.scss */
 .blog-categories ul li.active a {
   background: #fec935;
   color: #3a3a3a;
 }
-/* line 825, sass/layout/_main.scss */
+/* line 831, sass/layout/_main.scss */
 .blog-categories ul li:hover {
   filter: progid:DXImageTransform.Microsoft.Alpha(enabled=false);
   opacity: 1;
 }
-/* line 827, sass/layout/_main.scss */
+/* line 833, sass/layout/_main.scss */
 .blog-categories ul li:hover a {
   background: #fec935;
   color: #3a3a3a;
@@ -5492,56 +5497,56 @@ section {
   opacity: 1;
 }
 
-/* line 837, sass/layout/_main.scss */
+/* line 843, sass/layout/_main.scss */
 .blog-post {
   border-top: 5px solid #fec935;
   padding-top: 20px;
   padding-bottom: 20px;
 }
-/* line 842, sass/layout/_main.scss */
+/* line 848, sass/layout/_main.scss */
 .blog-post h2 {
   margin-bottom: 15px;
 }
-/* line 845, sass/layout/_main.scss */
+/* line 851, sass/layout/_main.scss */
 .blog-post h2 a {
   color: #3a3a3a;
 }
-/* line 850, sass/layout/_main.scss */
+/* line 856, sass/layout/_main.scss */
 .blog-post h5 {
   font-family: "Avenir Next Cyr W00 Heavy";
 }
-/* line 853, sass/layout/_main.scss */
+/* line 859, sass/layout/_main.scss */
 .blog-post h5 a {
   color: #3a3a3a;
 }
-/* line 858, sass/layout/_main.scss */
+/* line 864, sass/layout/_main.scss */
 .blog-post h6 {
   color: #3a3a3a;
 }
 
-/* line 863, sass/layout/_main.scss */
+/* line 869, sass/layout/_main.scss */
 .blog-post-small {
   padding-right: 20px;
 }
 
-/* line 867, sass/layout/_main.scss */
+/* line 873, sass/layout/_main.scss */
 .blog-post-categories {
   margin-bottom: 10px;
   color: #fec935;
   font-family: "Avenir Next Cyr W00 Bold";
 }
 
-/* line 873, sass/layout/_main.scss */
+/* line 879, sass/layout/_main.scss */
 .active-category {
   display: block;
 }
 
-/* line 877, sass/layout/_main.scss */
+/* line 883, sass/layout/_main.scss */
 .active-sidebar-title {
   border-bottom: 3px solid #fec935;
 }
 
-/* line 881, sass/layout/_main.scss */
+/* line 887, sass/layout/_main.scss */
 .moretag {
   color: #fec935;
   text-transform: uppercase;
@@ -5549,78 +5554,78 @@ section {
   font-family: "Avenir Next Cyr W00 Bold";
 }
 
-/* line 888, sass/layout/_main.scss */
+/* line 894, sass/layout/_main.scss */
 .social-icons {
   color: #a9a9a9;
 }
-/* line 891, sass/layout/_main.scss */
+/* line 897, sass/layout/_main.scss */
 .social-icons a {
   color: #a9a9a9;
 }
-/* line 895, sass/layout/_main.scss */
+/* line 901, sass/layout/_main.scss */
 .social-icons i {
   font-size: 25px;
   margin-right: 20px;
 }
 
-/* line 901, sass/layout/_main.scss */
+/* line 907, sass/layout/_main.scss */
 .news {
   margin-bottom: 0px;
 }
 
-/* line 905, sass/layout/_main.scss */
+/* line 911, sass/layout/_main.scss */
 .image-holder {
   height: 100%;
   display: table !important;
 }
 
-/* line 910, sass/layout/_main.scss */
+/* line 916, sass/layout/_main.scss */
 .image-text {
   padding: 100px 50px;
   display: table-cell;
   vertical-align: middle;
   height: 100%;
 }
-/* line 916, sass/layout/_main.scss */
+/* line 922, sass/layout/_main.scss */
 .image-text h4 {
   color: white;
   margin-bottom: 10px;
   font-family: "Avenir Next Cyr W00 Bold";
 }
 
-/* line 924, sass/layout/_main.scss */
+/* line 930, sass/layout/_main.scss */
 .mejs-container {
   width: 100% !important;
 }
 
-/* line 928, sass/layout/_main.scss */
+/* line 934, sass/layout/_main.scss */
 .video-holder {
   overflow: hidden;
   height: 400px;
   position: relative;
 }
 
-/* line 934, sass/layout/_main.scss */
+/* line 940, sass/layout/_main.scss */
 .wp-video {
   margin-top: -40%;
 }
 
-/* line 938, sass/layout/_main.scss */
+/* line 944, sass/layout/_main.scss */
 .text-holder {
   background-color: #dcdcdc;
   padding: 60px;
   height: 100%;
 }
-/* line 943, sass/layout/_main.scss */
+/* line 949, sass/layout/_main.scss */
 .text-holder h3 {
   color: #393939;
 }
-/* line 947, sass/layout/_main.scss */
+/* line 953, sass/layout/_main.scss */
 .text-holder p {
   color: #9e9e9e;
 }
 
-/* line 952, sass/layout/_main.scss */
+/* line 958, sass/layout/_main.scss */
 .triangle-bar {
   width: 100%;
   float: left;
@@ -5629,7 +5634,7 @@ section {
   bottom: 0;
 }
 
-/* line 960, sass/layout/_main.scss */
+/* line 966, sass/layout/_main.scss */
 .triangle-block {
   width: calc(50% - 60px);
   float: left;
@@ -5638,7 +5643,7 @@ section {
   background-color: white;
 }
 
-/* line 968, sass/layout/_main.scss */
+/* line 974, sass/layout/_main.scss */
 .triangle-left {
   width: 0;
   height: 0;
@@ -5649,7 +5654,7 @@ section {
   display: inline;
 }
 
-/* line 978, sass/layout/_main.scss */
+/* line 984, sass/layout/_main.scss */
 .triangle-right {
   width: 0;
   height: 0;
@@ -5660,7 +5665,7 @@ section {
   display: inline;
 }
 
-/* line 988, sass/layout/_main.scss */
+/* line 994, sass/layout/_main.scss */
 #loadmore-posts {
   clear: both;
   width: 20%;
@@ -5674,25 +5679,25 @@ section {
   color: white;
   margin-top: 10px;
 }
-/* line 1001, sass/layout/_main.scss */
+/* line 1007, sass/layout/_main.scss */
 #loadmore-posts:hover {
   background-color: white;
   color: #fec935;
   cursor: pointer;
 }
 
-/* line 1008, sass/layout/_main.scss */
+/* line 1014, sass/layout/_main.scss */
 .page-numbers {
   display: none;
 }
 
-/* line 1009, sass/layout/_main.scss */
+/* line 1015, sass/layout/_main.scss */
 a.next.page-numbers {
   display: block;
   color: white;
 }
 
-/* line 1010, sass/layout/_main.scss */
+/* line 1016, sass/layout/_main.scss */
 a.next.page-numbers:hover {
   display: block;
   color: #fec935;
