full width arrow hovers

--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -747,9 +747,9 @@ section {
   border-top: 5px solid $green-primary;
 }
 
-.page-template-product main, .page-template-panel main {
-  border-top: 5px solid $blue-primary;
-}
+// .page-template-product main, .page-template-panel main {
+//   border-top: 5px solid $blue-primary;
+// }
 
 .parent-page-online-learning main{
   border-top: 5px solid $blue-primary;
