--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -373,7 +373,7 @@ $color_vars: $yellow-primary, $yellow-secondary, $yellow-tertiary, $purple-prima
   }
 }
 
-.parent-page-story-page .banner-inner {
+.page-template-story .banner-inner {
   height: 500px;
 
   .banner-text {
